--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="all.css" />
   </head>
-  <body></body>
+  <body>
+    <script src="all.js"></script>
+  </body>
 </html>
